--- a/css/main.css
+++ b/css/main.css
@@ -784,7 +784,7 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   font-family: "metropolis-semibold", sans-serif;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   height: 5.4rem;
@@ -3190,9 +3190,9 @@ html.no-csstransitions .home-content__main {
   left: 50%;
 }
 .cl-go-top::after {
-  content: "back to top";
+  content: "voltar ao topo";
   display: inline-block;
-  width: 120px;
+  width: 140px;
   font-size: 1.2rem;
   line-height: 30px;
   text-transform: uppercase;
