--- a/css/main.css
+++ b/css/main.css
@@ -784,7 +784,7 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   font-family: "metropolis-semibold", sans-serif;
-  /* font-size: 1.2rem; */
+  font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
   height: 5.4rem;
