mudando de presencial para online

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,14 @@ body {
   padding: 0;
 }
 
+.gold {
+  color: rgb(217, 189, 155);
+} 
+
+.center {
+  text-align: center;
+}
+
 /* ------------------------------------------------------------------- 
  * ## links
  * ------------------------------------------------------------------- */
